@@ -1,3 +1,5 @@
+* Add url widget to contact mechanism list view
+
 Version 2.6.0 - 2012-10-22
 * Bug fixes (see mercurial logs for details)
 
